--- a/app/templates/quality_control_basic.html
+++ b/app/templates/quality_control_basic.html
@@ -71,8 +71,8 @@
 <br>
 <div class="container-fluid no_print">
 	<div class="col-md-4 entryType" id="qcEnryContainer">
-		<input type="text" class="form-control qc-entry" id="qcEntry" placeholder="Enter QC results">
-		<button class="btn btn-default" id="submitQC" onclick="inputQC()" type="submit">Submit</button>	
+		<span class="col-md-9"><input type="text" class="form-control qc-entry" id="qcEntry" placeholder="Enter QC results"></span>
+		<span><button class="btn btn-default" id="submitQC" onclick="inputQC()" type="submit">Submit</button></span>	
 		<p><a href="#" id="importExcelQC">Import from excel instead?</a></p>
 	</div>
 	<div class="entryType" id="excelImportContainer">
