--- a/app/templates/documentation_page/document_control.html
+++ b/app/templates/documentation_page/document_control.html
@@ -26,7 +26,9 @@
 <br>
 <div class="row">
 	<div class="col-md-6">
+		{% if is_doc_admin %}
 		<p><a href="#" data-toggle="modal" data-target="#create_dept_modal" style="float:right;">Create Department</a></p>
+		{% endif %}
 		<br>
 		<ul class="nav nav-pills nav-stacked" role="tablist">
 			{% for dept in departments %}
@@ -38,7 +40,9 @@
 		<div class="tab-content" >
 			{% for dept in departments %}
 			<div role="tabpanel" class="tab-pane" id="documentation_deptname_{{ dept.id }}">
+				{% if is_doc_admin %}
 				<p><a href="#" data-toggle="modal" data-target="#create_sop_modal_{{ dept.id }}" style="float:right;">Create SOP for {{ dept.department_name }}</a></p>
+				{% endif %}
 				<br>
 				<ul class="nav nav-pills nav-stacked" role="tablist" >
 				{% for doc in dept.document %}
