--- a/app/templates/inventory_management/total_purchases.html
+++ b/app/templates/inventory_management/total_purchases.html
@@ -44,7 +44,7 @@
 						<td>{{ company.company_abbrv }}-PO-{{ purchase.purchase_order_no }}</td>
 						<td>{{ moment(purchase.date_purchased).format('lll') }}</td>
 						<td>{% for p in purchase.purchased_by %}{{ p.username }}{% endfor %}</td>
-						<td class="individual_total">{{ purchase.total }}</td>
+						<td class="individual_total">{{ purchase.total_purchased }}</td>
 					</tr>
 					{% endfor %}
 					<tr>
