fix editing requests

--- a/app/templates/inventory_management/create_internal_request.html
+++ b/app/templates/inventory_management/create_internal_request.html
@@ -173,6 +173,10 @@
 					}
 					return false;  
 				});
+				$("#save").click(function() {
+					var qty_{{  my_s.product.ref_number}} = $("#qty_{{  my_s.product.ref_number }}").html();
+					$("#form_qty_{{ my_s.product.ref_number }}").val(qty_{{ my_s.product.ref_number }});
+				});
 				
 			{% endfor %}
 		});
