--- a/app/templates/inventory_management/departments.html
+++ b/app/templates/inventory_management/departments.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 {% include 'inventory_management/inventory_manager_nav.html' %}		
-    <h3 class="inventory_headers">Manage Departments/ Item Types</h3>
+    <h3 class="inventory_headers">Manage Departments</h3>
 	<hr class="inventory_hr">
     <div class="row">
 		{% if is_inv_supervisor %}
