--- a/app/templates/inventory_management/inventory_overview.html
+++ b/app/templates/inventory_management/inventory_overview.html
@@ -97,7 +97,7 @@
 				<td>{{ company.company_abbrv}}-PO-{{ pl.purchase.purchase_order_no }}</td>
 				<td style="display:none;">{{ pl.dept_name }}</td>
 				<td>{{ pl.purchase.date_purchased.strftime('%d-%m-%Y') }}</td>
-				<td>{{ pl.qty }}</td>
+				<td>{{ pl.quantity }}</td>
 				<td>{{ pl.delivered_qty }}</td>
 			</tr>
 			{% endif %}
