--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -21,6 +21,9 @@
 			<p style="margin-left:45px;"><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:blue;"></span><span style="font-weight:bold;"> Manage inventories.</span></p>
 			<p style="margin-left:45px;"><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:blue;"></span><span style="font-weight:bold;"> Calculate and create LJ graphs.</span></p>
 			<p style="margin-left:45px;"><span class="glyphicon glyphicon-check" aria-hidden="true" style="color:blue;"></span><span style="font-weight:bold;"> Clinical laboratory specific calculators.</span></p>
+			<br>
+			<br>
+			<span style="float:left;margin-left:60px;"><a href="{{ url_for('terms_of_service') }}">Terms of Service </a></span><span style="float:right;margin-right:60px;"> <a href="{{ url_for('privacy_policy') }}"> Privacy Policy</a></span>
 		</div>
     </div>
     
