--- a/app/templates/inventory_management/total_purchases.html
+++ b/app/templates/inventory_management/total_purchases.html
@@ -60,7 +60,7 @@
 					</thead>
 					{% for purchase in purchases %}
 					<tr>
-						<td>{{ company.company_abbrv }}-PO-{{ purchase.purchase_order_no }}</td>
+						<td><a href="{{ url_for('purchase_list', company_name=company.company_name, purchase_order_no=purchase.purchase_order_no)}}">{{ company.company_abbrv}}-PO-{{ purchase.purchase_order_no }}</a></td>
 						<td>{{ moment(purchase.date_purchased).format('lll') }}</td>
 						<td>{% for p in purchase.purchased_by %}{{ p.username }}{% endfor %}</td>
 						<td class="individual_total">{{ purchase.total_purchased }}</td>
